@@ -1,3 +1,12 @@
+2015-02-21 Riccardo Mottola <rm@gnu.org>
+
+	* InFilters/DCCSupport/DCCGetter.m
+	* InFilters/DCCSupport/DCCObject.m
+	* InFilters/DCCSupport/DCCSender.m
+	* InFilters/DCCSupport/DCCSupport.m
+	* InFilters/DCCSupport/DCCSupportPreferencesController.m
+	Replaced GS macros
+
 2015-02-20 Riccardo Mottola <rm@gnu.org>
 
 	* Input/NetclassesInput/main.m
